Add web.xml Add Jdbc repository fix templates Add init listner